--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>flower-assigment</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="about">
+            <div class="about-text">
+                <h1 class="text-title">Let's make beautiful flowers a part of your life.</h1>
+                <p class="style-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <div class="about-img">
+                <img class="imgf" src="./images/Flower Asset/pngwing 10.png" alt="">
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="main-section">
+            <div class="text-main">
+                <h1 class="main-tex">Our Featured Flowers</h1>
+                <p class="destext">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="img-main">
+              <img class="img-bk1" src="./images/Flower Asset/pngwing 5.png" alt="">
+              <img class="img-bk2" src="./images/Flower Asset/pngwing 6.png" alt="">
+              <img class="img-bk3" src="./images/Flower Asset/pngwing 7.png" alt="">
+            </div>
+        </div>
+        <div class="hoatdeal-section">
+            <div class="hoatdeal-text">
+<h1 class="main-tex">Hot Deal ! Sale Up To 25% Off</h1>
+<p class="destext">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+<button class="btn-primary">Sign Up</button>
+            </div>
+            <div class="hoatdeal-img">
+                <img src="./images/Flower Asset/pngwing 8.png" alt="">
+
+            </div>
+        </div>
+    </main>
+    <footer></footer>
 </body>
 </html>
